Update project files and improve code formatting
- Updated `.gitignore` to include new build output paths.
- Bumped `ConstExpr.Core` and `ConstExpr.SourceGenerator` versions to `0.1.17-preview`.
- Refactored `Main.cs` for better logging and consistency.
- Enhanced `Test.cs` with new using directives and improved readability.
- Modified `BodyAnalyzer.cs` and `ConstantParametersAnalyzer.cs` to pass compilation context in `IsInConstExprBody`.
- Changed `ConstExpr.SourceGenerator.csproj` to Roslyn analyzer type.
- Improved formatting and logic in `ConstExprOperationVisitor.cs`.
- Updated `SyntaxHelpers.cs` to enhance `IsInConstExprBody` functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 /Vectorize/ConstExpr.Core/bin/Debug/netstandard2.0
 /Vectorize/ConstExpr.Core/obj/Debug/netstandard2.0
 /Vectorize/ConstExpr.Core/obj
+/Vectorize/ConstExpr.Core/bin/Release/netstandard2.0
+/Vectorize/ConstExpr.Core/bin/Release
+/Vectorize/ConstExpr.Sample/bin/Release/net9.0
