--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -7,12 +7,12 @@
 		<AssemblySearchPath_UseOutDir>true</AssemblySearchPath_UseOutDir>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 		<!--		<CompilerVisibleProperty Include="SgfAddModuleInitializerAttribute"/>-->
-		<IsRoslynComponent>true</IsRoslynComponent>
+		<IsRoslynAnalyzer>true</IsRoslynAnalyzer>
 		<PolySharpExcludeGeneratedTypes>System.Runtime.CompilerServices.ModuleInitializerAttribute</PolySharpExcludeGeneratedTypes>
 		<RootNamespace>ConstExpr.SourceGenerator</RootNamespace>
 
 		<PackageId>ConstExpr.SourceGenerator</PackageId>
-		<Version>0.1.16-preview</Version>
+		<Version>0.1.17-preview</Version>
 		<Authors>JanTamis</Authors>
 		<Company>JanTamis</Company>
 		<Description>A source generator that provides constant expression optimizations</Description>
@@ -23,15 +23,13 @@
 		<IsPackable>true</IsPackable>
 		<AssemblyName>ConstExpr.SourceGenerator</AssemblyName>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
-<!--		<PackageType>Analyzer</PackageType>-->
+		<PackageType>Analyzer</PackageType>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="ConstExpr.SourceGenerator.props" Visible="false"
-      Pack="true" PackagePath="build" />
+		<None Include="ConstExpr.SourceGenerator.props" Visible="false" Pack="true" PackagePath="build" />
 
-		<None Include="ConstExpr.SourceGenerator.targets" Visible="false"
-      Pack="true" PackagePath="build" />
+		<None Include="ConstExpr.SourceGenerator.targets" Visible="false" Pack="true" PackagePath="build" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -43,13 +41,17 @@
 		<None Remove="Generated\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="C:\Users\jan.tamis\source\repos\JanTamis\Vectorize\Vectorize\ConstExpr.SourceGenerator\bin\Release\netstandard2.0\ConstExpr.SourceGenerator.dll" />
+	</ItemGroup>
+
 	<!-- Analyzer dll include AFTER removal so it isn't excluded -->
 	<ItemGroup>
 		<None Include="$(TargetPath)" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Bcl.Numerics" Version="9.0.7" >
+		<PackageReference Include="Microsoft.Bcl.Numerics" Version="9.0.8">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0">
@@ -69,16 +71,16 @@
 		<PackageReference Include="SourceGenerator.Foundations.Contracts" Version="2.0.13">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.Collections.Immutable" Version="9.0.7" >
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.8">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.Memory" Version="4.6.3" >
+		<PackageReference Include="System.Memory" Version="4.6.3">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.7" >
+		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.8">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" >
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
@@ -89,8 +91,6 @@
 		</ProjectReference>
 		<!-- New Core reference (public so NuGet picks it up as dependency) -->
 		<ProjectReference Include="..\ConstExpr.Core\ConstExpr.Core.csproj" />
-
-		<None Remove="bin\Debug\netstandard2.0\\ConstExpr.SourceGenerator.dll" />
 		
 	</ItemGroup>
 </Project>
