--- a/ConstExpr.Tests/ConstExpr.Tests.csproj
+++ b/ConstExpr.Tests/ConstExpr.Tests.csproj
@@ -32,4 +32,8 @@
 	  <ProjectReference Include="..\Vectorize\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Tests\" />
+	</ItemGroup>
+
 </Project>
