Refactor ConstExpr for new attributes and optimizations
Introduced `ConstEvalAttribute` to enhance constant evaluation with configurable floating-point modes (`Strict` and `FastMath`). Refactored attribute handling to use a generic `IsAttribute<T>` method for improved reusability. Updated `SyntaxHelpers` and `ConstExprPartialRewriter` to support the new attribute and optimize pattern matching, binary operations, and method invocations.

Deprecated or commented out methods in `MemoryExtensionsBuilder`, `BaseBuilder`, and `EnumerableBuilder`, indicating a shift in design philosophy. Simplified codebase by removing redundant logic and improving maintainability. Adjusted analyzers to enforce stricter rules and align with the new attribute-driven approach.

Added `FloatingPointEvaluationMode` enum and updated `ConstExprSourceGenerator` to ensure compatibility with the new design. These changes reflect a transition phase towards a more streamlined and attribute-driven architecture.

--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -38,6 +38,10 @@
 		<None Remove="bin\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="D:\source\repos\JanTamis\Vectorize\Vectorize\ConstExpr.SourceGenerator\bin\Debug\netstandard2.0\ConstExpr.SourceGenerator.dll" />
+	</ItemGroup>
+
 	<!-- Analyzer dll include AFTER removal so it isn't excluded -->
 	<ItemGroup>
 		<None Include="$(TargetPath)" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
