(perf) core: optimize caching, string handling, and parallelism
Enhanced performance and maintainability of the `ConstExpr.SourceGenerator` project with the following changes:

- Introduced `RoslynApiCache` for thread-safe caching of Roslyn API results, reducing redundant calls.
- Added `StringBuilderCache` to minimize allocations during string composition.
- Improved parallel processing by integrating `roslynApiCache` into `ConstExprSourceGenerator`.
- Refactored `using` directive sorting with `UsingComparer` for consistent ordering.
- Updated `PruneVariableRewriter` and `SyntaxHelpers` to leverage caching and improve thread safety.
- Optimized `FormattingHelper.Render` for better performance.
- General code cleanup, including removal of unused code and improved documentation.

These changes collectively enhance performance, scalability, and code clarity.

--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -92,4 +92,10 @@
 		<ProjectReference Include="..\ConstExpr.Core\ConstExpr.Core.csproj" />
 		
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Factories\" />
+	  <Folder Include="Handlers\" />
+	  <Folder Include="Strategies\" />
+	</ItemGroup>
 </Project>
