refactor(PruneVariableRewriter): simplify constructor and improve variable handling
Removed unused fields and streamlined the constructor for better readability and maintainability. Added a new method to handle foreach statements.

--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -36,6 +36,7 @@
 		<Compile Remove="bin\**" />
 		<EmbeddedResource Remove="bin\**" />
 		<None Remove="bin\**" />
+		<Compile Remove="Optimizers\StatementOptimizers\BaseStatementOptimizer.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -94,8 +95,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Factories\" />
-	  <Folder Include="Handlers\" />
 	  <Folder Include="Strategies\" />
 	</ItemGroup>
 </Project>
