--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<RootNamespace>Vectorize.Sample</RootNamespace>
 		<OutputType>Exe</OutputType>
-		<LangVersion>13</LangVersion>
+		<LangVersion>default</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
 		<UseConstExpr>true</UseConstExpr>
