(refactor) core: remove nullable from SyntaxNode list params
Updated method signatures in ConstExprPartialRewriter.Invocations.cs to use List<SyntaxNode> instead of List<SyntaxNode?>. This enforces non-null SyntaxNode elements for several internal methods, improving type safety and clarifying that null values are not expected in argument lists.

No functional changes; improves code clarity and safety.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /Vectorize/ConstExpr.Core/bin/Release/netstandard2.0
 /Vectorize/ConstExpr.Core/bin/Release
 /Vectorize/ConstExpr.Sample/bin/Release/net9.0
+/Vectorize/ConstExpr.Sample/bin/Debug/net10.0
