refactor: core: track variable usage counts in collector
VariableUsageCollector now uses dictionaries to track the number of reads, writes, and ref/out usages for each variable, instead of just presence. Methods for retrieving usage counts were added, and related logic was updated to use the new structure. Also, minor idiomatic improvements were made in AggregateFunctionOptimizer, and .gitignore was updated with additional build output paths.

No breaking changes; enables more precise variable usage analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /Vectorize/ConstExpr.Core/bin/Release
 /Vectorize/ConstExpr.Sample/bin/Release/net9.0
 /Vectorize/ConstExpr.Sample/bin/Debug/net10.0
+/ConstExpr.Tests/bin/Debug/net10.0
